Finish the last of the sentences!

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -210,32 +210,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>hön vos niün dëko noyo, niün niltügu si.&emsp;<em>When he saw me, he stopped.</em></p>
 <p>küu lı liülë müt noyo nënko vos lı xoinpo ü vos noyo lı göwo löicök.&emsp;<em>Do not laugh at me because I seem so absent minded.</em></p>
 <p>noyo pı ilxizuk ke cüdo tömös onö vos nimü puswen nı.&emsp;<em>I shall lend you the books that you need.</em></p>
-<p>&emsp;<em>Come early next Monday if you can.</em></p>
-<p>&emsp;<em>If you come early, wait in the hall.</em></p>
-<p>&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
-<p>&emsp;<em>Gnomes are little men who live under the ground.</em></p>
-<p>&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
-<p>&emsp;<em>Hold the horse while I run and get my cap.</em></p>
-<p>&emsp;<em>I have found the ring I lost.</em></p>
-<p>&emsp;<em>Play and I will sing.</em></p>
-<p>&emsp;<em>That is the funniest story I ever heard.</em></p>
-<p>&emsp;<em>She is taller than her brother.</em></p>
-<p>&emsp;<em>They are no wiser than we.</em></p>
-<p>&emsp;<em>Light travels faster than sound.</em></p>
-<p>&emsp;<em>We have more time than they.</em></p>
-<p>&emsp;<em>She has more friends than enemies.</em></p>
-<p>&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
-<p>&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
-<p>&emsp;<em>I am sure that we can go.</em></p>
-<p>&emsp;<em>We went back to the place where we saw the roses.</em></p>
-<p>&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
-<p>&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
-<p>&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
+<p>küu lı gik hoi lono xolxili uklo hëlxun hön vos nimü köi lı gik.&emsp;<em>Come early next Monday if you can.</em></p>
+<p>hön vos nimü lı gik pı hëlxun, küu motsı hoi titon küncien.&emsp;<em>If you come early, wait in the hall.</em></p>
+<p>noyo yünyoü si sıskın moskül yë xonluk eswen et Ontöniö.&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
+<p>lı umo cüti Gunön xe nıwos pümi sël.&emsp;<em>Gnomes are little men who live under the ground.</em></p>
+<p>xokön umo yüpik niün nënko wëilun xëntil niün.&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
+<p>küu ogolol küdu onö pinë noyo köi lı lö ogolol öntön wik noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
+<p>noyo yosten si wutun zixitü onö vos noyo nocido.&emsp;<em>I have found the ring I lost.</em></p>
+<p>küu kontol ün noyo ke kontol pı öitun.&emsp;<em>Play and I will sing.</em></p>
+<p>ulyö lı kiso yë yoümok möi et onö en vos noyo hoi xokön woküt tenkin si.&emsp;<em>That is the funniest story I ever heard.</em></p>
+<p>niün wohi lı ıwotë eswen en sıskın moskül niün.&emsp;<em>She is taller than her brother.</em></p>
+<p>niün lı yök colot eswen en nü.&emsp;<em>They are no wiser than we.</em></p>
+<p>küon tulutı pı viki eswen en tenkin.&emsp;<em>Light travels faster than sound.</em></p>
+<p>nü yünyoü woküt eswen en niün.&emsp;<em>We have more time than they.</em></p>
+<p>niün yünyoü sütüö eswen en umo xe dën niün.&emsp;<em>She has more friends than enemies.</em></p>
+<p>niün yünyoü muni yë cüti ëto ün ovek hünsüon niün ün tiü mënyüu nıwos poxö sël cüti yë mökövo nomü ün ipüwë.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
+<p>hoi vos woyü üslëk si, öni tulutı onö ölë öntön lipü ünhılun si niün pı vëlkonö eswen.&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
+<p>noyo lı guvıs hön vos nü köi lı lö.&emsp;<em>I am sure that we can go.</em></p>
+<p>nü lı si dukwëlıt müt poxö vos nü dëko si inpoli onö hoi.&emsp;<em>We went back to the place where we saw the roses.</em></p>
+<p>"nomü övo lı cën yë tiü dus kildo xokön," lı vos öni liun gos köto si.&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
+<p>noyo goniso vos ü oütö kiskö övo lı cok hoi tiü ëvun yë hëlxun eswen hön lono övo.&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
+<p>ü goniso noyo lı vos öni pöklön ke cüdo yünlön müt niün.&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
 <p>mötivö vos niün lı cok si sün sınsi, lı nosö.&emsp;<em>Why he has left the city is a mystery.</em></p>
 <p>ü nıwos onö lı totsı hoi vos son titon monodo möi dizel.&emsp;<em>The house stands where three roads meet.</em></p>
 <p>niün yünyoü ëto eswen muni en düuncit.&emsp;<em>He has far more money than brains.</em></p>
-<p>&emsp;<em>Evidently that gate is never opened, for the long grass and the great hemlocks grow close against it.</em></p>
-<p>&emsp;<em>I met a little cottage girl; she was eight years old, she said.</em></p>
+<p>pı wuktomü ü zınkon ulyö hoi xünyu woküt lı put hön hülü ıwotë ün gos cënpö lı si niök vëlkonö dën nı.&emsp;<em>Evidently that gate is never opened, for the long grass and the great hemlocks grow close against it.</em></p>
+<p>noyo monodo si umo yë nıwos cüti et cüti; vos niün lı nokdo yë tukwos üsën, lı vos niün köto si.&emsp;<em>I met a little cottage girl; she was eight years old, she said.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
