--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -22,7 +22,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pinton lono poivön küon pı möcipo.&emsp;<em>The sun is shining.</em></p>
 <p>pinton lono poivön si küon.&emsp;<em>The sun shone.</em></p>
 <p>pinton lono ke poivön küon.&emsp;<em>The sun will shine.</em></p>
-<p>pinton lono poivön küon pı pıslon.&emsp;<em>The sun has been shining.</em></p>
+<p>pinton lono cinli si kon poivön küon.&emsp;<em>The sun has been shining.</em></p>
 <p>pinton lono poivön küon pı möcipo pı woküt dizel&emsp;<em>The sun is shining again.</em></p>
 <p>pinton lono ke poivön küon hoi lono uklo.&emsp;<em>The sun will shine tomorrow.</em></p>
 <p>pinton lono poivön küon pı ëto.&emsp;<em>The sun shines brightly.</em></p>
