some word and sentence fixes

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -31,32 +31,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>möi umo pı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
 <p>yoüti umo pı oltü öitun si.&emsp;<em>Some of the people shouted.</em></p>
 <p>ëto umo pı oltü öitun pı düi vun.&emsp;<em>Many of the people shouted twice.</em></p>
-<p>umo xowosë pı ëto öitun.&emsp;<em>Happy people often shout.</em></p>
+<p>umo xowosë pı ëto pı oltü öitun.&emsp;<em>Happy people often shout.</em></p>
 <p>mocko xonluk onö tüu si zoston pı cën.&emsp;<em>The kitten jumped up.</em></p>
-<p>mocko xonluk onö tüu si zoston müt miëpıl potuk.&emsp;<em>The kitten jumped onto the table.</em></p>
+<p>mocko xonluk onö tüu si zoston müt solwöc miëpıl.&emsp;<em>The kitten jumped onto the table.</em></p>
 <p>mocko xonluk cüti noyo lı si lö pı cok. &emsp;<em>My little kitten walked away.</em></p>
 <p>lı hüzon pı möcipo.&emsp;<em>It's raining.</em></p>
-<p>hüzon di si müt sël.&emsp;<em>The rain came down.</em></p>
-<p>mocko onö pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
+<p>hüzon di si sël.&emsp;<em>The rain came down.</em></p>
+<p>mocko xonluk onö pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
 <p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
-<p>pı kut vun ü zonwul hönyo nıwos hoi övo.&emsp;<em>Once wild animals lived here.</em></p>
-<p>pı dilë ü niün vohoso si.&emsp;<em>Slowly she looked around.</em></p>
-<p>küu lı cok ze.&emsp;<em>Go away!</em></p>
+<p>pı kut vun ü zonwul hönyo nıwos si övo.&emsp;<em>Once wild animals lived here.</em></p>
+<p>pı dilë ü niün vohoso si ünhılun niün.&emsp;<em>Slowly she looked around.</em></p>
+<p>küu lı lö pı cok.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
 <p>nimü küu lı lö.&emsp;<em>You should go.</em></p>
 <p>noyo ke lı xowosë hön xe lı lö.&emsp;<em>I will be happy to go.</em></p>
 <p>niün ke lı gik pı zelen.&emsp;<em>He will arrive soon.</em></p>
-<p>gundolë yë lözic onö lı si ınvultin pı cok.&emsp;<em>The baby's ball has rolled away.</em></p>
-<p>düi umo moskül xonluk onö wëloı ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
+<p>gundolë yë lözic onö lı si tulkolyun pı cok.&emsp;<em>The baby's ball has rolled away.</em></p>
+<p>düi umo moskül xonluk onö wëloı pı möcipo ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
 <p>üsmon ximu onö pı könën ke di vonmot.&emsp;<em>This mist will probably clear away.</em></p>
 <p>inpoli hosin lı niök hoi xokön.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
 <p>nü küu mokon pı dilë eswen.&emsp;<em>We should eat more slowly.</em></p>
 <p>nimü di si hoi övo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
-<p>nimü küu cukto pı cönkök eswen.&emsp;<em>You must write more neatly.</em></p>
+<p>nimü küu cukto pı müvëü eswen.&emsp;<em>You must write more neatly.</em></p>
 <p>hön elentët müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
-<p>zowo yë umo Henli köi yosten yök titon dündon. &emsp;<em>Henry's dog is lost.</em></p>
+<p>zowo yë umo Henli nocido si titon niün. &emsp;<em>Henry's dog is lost.</em></p>
 <p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
 <p>döcui umo yë umo wohi xonluk cüti onö lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>noyo pı sodolun lı conzodo sunpülno.&emsp;<em>I usually sleep soundly.</em></p>
@@ -64,7 +64,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo köi kelo cıhöü woküt kon pëüdo.&emsp;<em>I can play after school.</em></p>
 <p>nü lı si lö müt sınsi oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
 <p>nü lı si gik hoi xüto.&emsp;<em>We arrived at the river.</em></p>
-<p>noyo pı pıslon motsı hön nimü.&emsp;<em>I have been waiting for you.</em></p>
+<p>noyo pı öhël motsı hön nimü.&emsp;<em>I have been waiting for you.</em></p>
 <p>öni mühoyon onö sıtyo si hoi ünhılun yë mötö onö.&emsp;<em>The campers sat around the fire.</em></p>
 <p>umo wohi xonluk cüti xe ovek mocko xonluk, sıtyo si hoi vëlkonö noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
 <p>mënyüu onö motsı si hoi zınkon hön motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
@@ -80,24 +80,24 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nimü hoi ozüul woküt tulutı piömu nomü hüzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
 <p>nü oütö vio woyü müt cën yë xüto onö lon yoüti mönpılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
 <p>xokön umo vısun kon wëtodü.&emsp;<em>Everybody knows about hunting.</em></p>
-<p>hoi lono xolxili xe cıhöü poxö yë dönüxın mönpılı yë pinton lono, ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
+<p>hoi lono küon xe cıhöü woküt vos pinton lono socok xe di vëlkonö eswen, ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
 <p>umo Ton lı si liülë nënko cülci yë vonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
-<p>umo moskül nokdo ovek nüyo yë kon lö wowoë lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
+<p>umo moskül nokdo xe ovek nüyo yë kon lö wowoë, lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
 <p>ölë nıwos yë cüi nomü lı si ëo vicwo ü tolën nomü weltö.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
 <p>oüdi cüti motsı si pı sonti hoi sël yë pölvëlë hüzon pukü müt pinton lono yë yogö üsën niök et yë tüt yoüti.&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
 <p>ëto umo wohi xonluk xe ovek wutun inpoli xe hoi wik, lı cıvulo hoi ünhılun yë mötö vimösyös.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
-<p>yogö yë dıpo in mötsılë lı si zigil müt sokovü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
-<p>umo moskül xonluk kut yë gito niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
-<p>hoi cën yë töxütsı pümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
-<p>hoi woküt yë kon nıwos yë venüo onö ü nü pı ëto lı lö vio wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
-<p>hoi woküt zık ü monodo sün sınsi cënpö lı gik.&emsp;<em>When will your guests from the city arrive?</em></p>
+<p>öni doknü onö yë dıpo yë hülü in zohit et onö lı si zigil müt sokovü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
+<p>umo moskül xonluk kut onö yë gito onö niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
+<p>hoi solwöc yë töxütsı pümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
+<p>hoi woküt yë kon nıwos yë venüo londuluk onö ü nü pı ëto lı lö vio wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
+<p>hoi woküt zık ü monodo sün sınsi cënpö ke lı gik.&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>hoi vëlkonö yë göyu onö yë xüto onö ü titon nı lı si ınvultin pı cies müt kılukü.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gıtno düi tohılök pümi ıwotë lı tıgoyo ü venüo süpöl yë pümi sël.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
 <p>gıtno gos lisik liun si inpoli hünsık ıwotë.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
 <p>ölë ziziyo len onö yë ëto nomü onö lı ëo vunlit sün pümi onö.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
 <p>pinton lono onö pı sël gıtno tolën nomü dëko si mënyüu onö xe kelo.&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
 <p>woyü vitikös üslëk söpo ënkömön mıslı kon okülo sütüö.&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
-<p>küldü onö yë doi lı si ınvultin hoi sokovü.&emsp;<em>The spool of thread rolled across the floor.</em></p>
+<p>küldü onö yë doi lı si tulutı sokovü pı tulkolyun.&emsp;<em>The spool of thread rolled across the floor.</em></p>
 <p>dıpo yë gos xe liun, lı si totsı hoi kümun opoki.&emsp;<em>A box of growing plants stood in the Window.</em></p>
 <p>noyo lı xowosë ëto.&emsp;<em>I am very happy.</em></p>
 <p>küöxı nomü zingu övo yünyoü ëto mötowo yë iskö küöxı.&emsp;<em>These oranges are juicy.</em></p>
@@ -188,7 +188,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>cüi nomü onö ölë nıwos niün lı ëo tüt ün lohot vio vödoloc nulun ün woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
 <p>umo wohi cüti köson öntön yë döcui umo vio cızi niün.&emsp;<em>The little girl made the doll's dress herself.</em></p>
 <p>noyo lı ëo tönkö ölë cızi noyo.&emsp;<em>I hurt myself.</em></p>
-<p>hoi pıslon niün köto müt cızi niün.&emsp;<em>She was talking to herself.</em></p>
+<p>hoi öhël niün köto müt cızi niün.&emsp;<em>She was talking to herself.</em></p>
 <p>niün möniso si cızi niün xe köi lı oksiös yë imon.&emsp;<em>He proved himself trustworthy.</em></p>
 <p>nü köi dëko cızi nü hoi ximu.&emsp;<em>We could see ourselves in the water.</em></p>
 <p>küu tüu nı vio cızi nimü.&emsp;<em>Do it yourself.</em></p>
