--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -79,7 +79,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo köi sıtyo hoı ulyö ko.&emsp;<em>May I sit there?</em></p>
     <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
     <p>nimü köi köto si pı sëlöhö yë pökpün&emsp;<em>You might have warned me about the thunderstorm.</em></p>
-    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı pıslon.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı öhël.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı möcipo völun vos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
     <p>nü köi puswen vın xe lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
